fix: use public campaign links and configurable compliance footer

--- a/supabase/functions/.env.dev
+++ b/supabase/functions/.env.dev
@@ -8,6 +8,7 @@ SMTP_HOST=smtp.example.email
 SMTP_PORT=587
 SMTP_USER=your-secret-smtp-username
 SMTP_PASS=your-secret-smtp-password
+campaign_compliance_footer=
 
 LOGO_URL="https://db.leadminer.io/storage/v1/object/public/templates/LogoWithIcon.png"
 FRONTEND_HOST="http://localhost:8082"
