--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -7,6 +7,7 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
+campaign_compliance_footer=
 
 LOGO_URL="https://db.leadminer.io/storage/v1/object/public/templates/LogoWithIcon.png"
 FRONTEND_HOST="https://app.leadminer.io"
