--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -1,6 +1,6 @@
 LEADMINER_ANON_KEY=      # ( REQUIRED ) Supabase anon key
 LEADMINER_HASH_SECRET=   # ( REQUIRED ) The hash secret used by backend
-LEADMINER_PROJECT_URL=   # ( REQUIRED ) Supabase project url
+SUPABASE_PROJECT_URL=    # ( REQUIRED ) Supabase project url
 LEADMINER_SECRET_TOKEN=  # ( REQUIRED ) Supabase service role key
 
 SMTP_HOST=
