--- a/.github/workflows/prod-trigger.yml
+++ b/.github/workflows/prod-trigger.yml
@@ -15,6 +15,12 @@ jobs:
           repo_owner="ankaboot-source"
           repo_name="leadminer.io"
           event_type="trigger-prod"
+          supabase_project_url="${{ secrets.SUPABASE_PROJECT_URL_PROD }}"
+
+          if [ -z "$supabase_project_url" ]; then
+            echo "Missing required secret: SUPABASE_PROJECT_URL_PROD"
+            exit 1
+          fi
 
           curl -L \
             -X POST \
@@ -22,4 +28,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.DEPLOY_PAT }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
-            -d "{\"event_type\": \"$event_type\"}"
+            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"supabase_project_url\": \"$supabase_project_url\"}}"
