--- a/.github/workflows/qa-trigger-frontend-build.yml
+++ b/.github/workflows/qa-trigger-frontend-build.yml
@@ -6,8 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'frontend/**'
-
+      - "frontend/**"
 
 jobs:
   trigger:
@@ -19,6 +18,12 @@ jobs:
           repo_owner="ankaboot-source"
           repo_name="leadminer.io"
           event_type="trigger-qa-frontend-build"
+          supabase_project_url="${{ secrets.SUPABASE_PROJECT_URL_QA }}"
+
+          if [ -z "$supabase_project_url" ]; then
+            echo "Missing required secret: SUPABASE_PROJECT_URL_QA"
+            exit 1
+          fi
 
           curl -L \
             -X POST \
@@ -26,4 +31,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.DEPLOY_PAT }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
-            -d "{\"event_type\": \"$event_type\"}"
+            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"supabase_project_url\": \"$supabase_project_url\"}}"
