--- a/.github/workflows/qa-trigger-no-build.yml
+++ b/.github/workflows/qa-trigger-no-build.yml
@@ -6,10 +6,9 @@ on:
     branches:
       - main
     paths-ignore:
-      - '.github/workflows/**'
-      - 'frontend/**'
-      - 'backend/**'
-
+      - ".github/workflows/**"
+      - "frontend/**"
+      - "backend/**"
 
 jobs:
   trigger:
@@ -21,6 +20,12 @@ jobs:
           repo_owner="ankaboot-source"
           repo_name="leadminer.io"
           event_type="trigger-qa-no-build"
+          supabase_project_url="${{ secrets.SUPABASE_PROJECT_URL_QA }}"
+
+          if [ -z "$supabase_project_url" ]; then
+            echo "Missing required secret: SUPABASE_PROJECT_URL_QA"
+            exit 1
+          fi
 
           curl -L \
             -X POST \
@@ -28,4 +33,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.DEPLOY_PAT }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
-            -d "{\"event_type\": \"$event_type\"}"
+            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"supabase_project_url\": \"$supabase_project_url\"}}"
