--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "vue-tsc": "^3.1.0"
   },
   "dependencies": {
+    "@fontsource/material-symbols-outlined": "^5.2.37",
     "@primeuix/themes": "^1.2.5",
     "@sentry/nuxt": "^10.17.0",
     "@vueuse/core": "^13.9.0",
